--- a/Category-Presentation.css
+++ b/Category-Presentation.css
@@ -1,13 +1,16 @@
 body {
- background-image:url("https://backgroundcheckall.com/wp-content/uploads/2017/12/luxury-white-background-8.jpg");
+ background-image:url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/v413-sasi-78-crystalbackground_2.jpg?w=400&dpr=1&fit=default&crop=default&auto=format&fm=pjpg&q=75&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.1.2&s=2b23f45164b9b649c69f7c5c8a9c16aa");
+ background-repeat: no-repeat;
+ background-size: 100% 100%;
 }
 
 table,
  th,
   td {
-    border: 2px solid black;
+    border: 1.5px solid black;
     margin-right: auto;
     margin-left: auto;
+    border-color: pink;
 }
 
 p {
@@ -26,12 +29,34 @@ h2 {
     text-align: center;
 }
 
+#fashion h2 {
+    background-color: pink;
+    background-position: top;
+    line-height: 30px;
+    margin-top: 0em;
+    
+}
+
 input[type=number] {
     width: 30px;
 }
 
 input[type=submit] {
     margin-top: 10px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#checkout label {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+input.payment {
+    width: 20em; 
+    height: 2em;
 }
 
 
